# TechCompressor

./: .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY.md  THIRD_PARTY_NOTICES.md  UPGRADE.md  _techcompressor.bash  bench.py  build_release.ps1  file_version_info.txt  publish.md  pyproject.toml  requirements.txt  techcompressor.spec  validate_build_config.py
.github/: copilot-instructions.md
.github/workflows/: build.yml  ci.yml  codeql.yml  lint.yml  publish.yml  pytest.yml  release.yml  tests.yml
docs/: antivirus_false_positives.md  architecture.md  benchmarks.md  comparison.md  format.md  release_build_instructions.md
release/: CHANGELOG.md  README_RELEASE.txt  SECURITY.md
techcompressor/: __init__.py  archiver.py  cli.py  core.py  crypto.py  gui.py  recovery.py  tui.py  utils.py
tests/: __init__.py  test_archiver.py  test_archiver_coverage.py  test_archiver_deep.py  test_archiver_extra.py  test_brotli.py  test_build_config.py  test_cli.py  test_cli_coverage.py  test_cli_exec.py  test_core_algorithms.py  test_core_extra.py  test_crypto.py  test_deflate.py  test_file_attributes.py  test_gui_basic.py  test_gui_coverage.py  test_gui_extra.py  test_huffman.py  test_integration.py  test_lzw.py  test_multi_volume.py  test_perf_sanity.py  test_recovery.py  test_release_smoke.py  test_sanity.py  test_tui.py  test_tui_coverage.py  test_zstandard.py
