[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "techcompressor"
version = "0.1.0"
description = "TechCompressor - Modular Compression Framework"
authors = [{name = "Your Name"}]
dependencies = ["cryptography", "tqdm"]
requires-python = ">=3.10"
