[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "techcompressor"
version = "1.0.0"
description = "Multi-algorithm compression framework with encryption, archiving, and GUI"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Devaansh Pathak", email = "devaanshpathak@example.com"}]
keywords = ["compression", "lzw", "huffman", "deflate", "encryption", "archiving"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Compression",
]
dependencies = [
    "cryptography>=41.0.0",
    "tqdm>=4.65.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
gui = []  # Tkinter is part of standard library
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/DevaanshPathak/TechCompressor"
Repository = "https://github.com/DevaanshPathak/TechCompressor"
Issues = "https://github.com/DevaanshPathak/TechCompressor/issues"

[project.scripts]
techcompressor = "techcompressor.cli:main"
techcmp = "techcompressor.cli:main"
